# awsxmltojson

./: .gitignore  README.md  pyproject.toml  update_readme_with_samples.py
awsxmltojson/: __init__.py  convert_xml_to_dict.py  get_shape.py  global_shapes.json  sqs_mappers.py  xml_etree_to_dict.py
tests/: test_shape_parser.py
tests/samples/: ErrorResponse.py  SQS_AddPermission.py  SQS_ListQueues.py  SQS_ReceiveMessage.py  SQS_SendMessage.py  test_ErrorResponse.py  test_SQS_ListQueues.py  test_SQS_ReceiveMessage.py  test_SQS_ReceiveMessage_Namespace.py  test_SQS_SendMessage.py
