[tool.poetry]
name = "awsxmltojson"
version = "0.2.1"
description = "Converts XML Responses from AWS API to JSON"
homepage = "https://github.com/seveibar/awsxmltojson"
readme = "README.md"
authors = ["seveibar <seveibar@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
